# jaterm

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  ENCRYPTION_MIGRATION.md  GENERATE_UPDATER_KEYS.md  HELPER_CONSENT_TEST_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  SSH_BLOCKING_FIX_RESULTS.md  UPDATER_SETUP.md  UPDATER_TEST_RESULTS.md  package.json  pnpm-lock.yaml  session.md  test-editor.txt  test.txt.sig  tsconfig.json  vite.config.ts
.github/: README.md
.github/workflows/: build-release.yml  ci.yml  nightly.yml  publish-wiki.yml  release.yml  test-build.yml
docs/: ARCHITECTURE.md  FEATURES.md  HOST_TRUST_FLOW.md  ROADMAP.md  SECURITY.md  STABLE_CODESIGNING.md  persistence.md
github_tools/: README.md  generate_apple_secrets.sh
scripts/: build-macos.sh  build.sh  codegen.ts  dev.sh  fix-macos-signature.sh  generate-icons-full.sh  generate-latest-json.js  generate-latest-json.sh  generate-updater-keys.sh  publish-wiki.sh  recreate-dmg.sh  setup-github-secrets.sh  test-semver.sh
src/: App.tsx  app.css  index.html  main.tsx
src-helper/: Cargo.toml
src-helper/scripts/: generate-icons.sh
src-helper/src/: main.rs  version.rs
src-helper/src/commands/: git.rs  mod.rs  ports.rs
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  config_encrypted.rs  config_encrypted_v2.rs  encryption.rs  encryption_v2.rs  events.rs  main.rs  menu.rs  shell.rs  utils.rs
src-tauri/src/commands/: ai.rs  app.rs  encryption.rs  git.rs  helper.rs  keygen.rs  mod.rs  pty.rs  ssh.rs  watcher.rs
src-tauri/src/services/ai/: chat.rs  command_generator.rs  context.rs  mod.rs  providers.rs
src-tauri/src/services/git/: libgit2.rs  mod.rs
src-tauri/src/services/pty/: mod.rs  portable.rs
src-tauri/src/services/ssh/: libssh2.rs  mod.rs
src-tauri/src/services/watch/: mod.rs  notify.rs
src-tauri/src/state/: app_state.rs
src/components/: AiChatModal.tsx  AiSettingsTab.tsx  BuildPanel.tsx  CommandPalette.tsx  ComposeDrawer.tsx  Dialog.tsx  EditorPane.tsx  FileExplorerWithEditor.tsx  GitStatusBar.tsx  GitTools.tsx  HelperConsentModal.tsx  KeyGenerationModal.tsx  LocalFilePanel.tsx  LogViewerModal.tsx  MasterKeyDialog.tsx  MonacoDiffViewer.tsx  PasteConfirmModal.tsx  PortForwardForm.tsx  PortsPanel.tsx  ProfileEditor.tsx  ProfileManager.tsx  RemoteTerminalPane.tsx  SettingsPane.tsx  SftpPanel.tsx  SplitTree.tsx  SplitView.tsx  TabbedEditor.tsx  TabsBar.tsx  TerminalSettingsEditor.tsx  Toaster.tsx  Welcome.tsx  sessions.tsx
src/config/: themes.ts
src/services/: ai.ts  commandRegistry.ts  encryptionGate.ts  features.ts  git.ts  helper.ts  logger.ts  profileManager.ts  settings.ts  ssh.ts  telemetry.ts  terminal.ts  terminalEvents.ts  watcher.ts
src/store/: persist.ts  (+4 more)
tools/: README.md  generate-release-notes.mjs
wiki/: Architecture.md  Contributing.md  Getting-Started.md  Home.md  JaTerm-Helper.md  Profiles-and-Encryption.md  Release-and-Updater.md  Terminal-and-Performance.md  Troubleshooting.md
(+17 files in other folders)
