[package]
name = "jaterm-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "jaterm-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.18"
dirs = "5"
which = "6"
anyhow = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols for smaller binary