[package]
name = "jaterm"
version = "0.1.0"
description = "JATerm Tauri backend"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-build = { version = "2.3.1", features = [] }
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.17"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
anyhow = "1"
thiserror = "1"
portable-pty = "0.8"
nanoid = "0.4"
git2 = { version = "0.18", default-features = false, features = ["https"] }
base64 = "0.22"
dirs = "6"
ssh2 = "0.9"
sha2 = "0.10"

[features]
default = []
